tests/eval/snapshots/file_tests__eval__class_inheritance.lx@no_super.snap
---
source: tests/eval.rs
description: "class Foo {\n    method() {\n        print \"foo\";\n    }\n}\n\nclass Bar < Foo {}\n\nBar().method(); // > foo\n"
expression: combined
---
:: Output ::
foo
