tests/eval/snapshots/file_tests__eval__class_instances.lx.snap
---
source: tests/eval.rs
description: "class Foo {}\nvar foo = Foo();\nprint foo; // <Foo instance>\n"
expression: combined
---
:: Output ::
<Foo instance>
