tests/eval/snapshots/file_tests__eval__class_instances.lx@explicit_reinitialize.snap
---
source: tests/eval.rs
description: "class Foo {\n    init() {\n        print this;\n    }\n}\n\n// Should print three times\nvar foo = Foo();\nprint foo.init();\n"
expression: combined
---
:: Output ::
<Foo instance>
<Foo instance>
<Foo instance>
