tests/eval/snapshots/file_tests__eval__class_instances.lx@initializer.snap
---
source: tests/eval.rs
description: "class Foo {\n    init(val) {\n        this.val = val;\n    }\n}\n\nvar foo = Foo(\"lol\");\nprint foo.val; // > lol\n"
expression: combined
---
:: Output ::
lol
