tests/eval/snapshots/file_tests__eval__class_instances.lx@no_this_method.snap
---
source: tests/eval.rs
description: "class Foo {\n    lol(val) {\n        print val;\n    }\n}\n\nvar foo = Foo();\nfoo.lol(\"lmao\"); // > lmao\n\n"
expression: combined
---
:: Output ::
lmao
