tests/eval/snapshots/file_tests__eval__class_instances.lx@property_set.snap
---
source: tests/eval.rs
description: "class Foo {}\nvar foo = Foo();\nfoo.a = \"lol\";\nprint foo.a; // lol\n\n"
expression: combined
---
:: Output ::
lol
