tests/eval/snapshots/file_tests__eval__class_instances.lx@self_referential.snap
---
source: tests/eval.rs
description: "class Foo {\n    another() {\n        return Foo();\n    }\n}\n\nprint Foo().another(); // > <Foo instance>\n\n"
expression: combined
---
:: Output ::
<Foo instance>
