tests/eval/snapshots/file_tests__eval__class_instances.lx@this_method.snap
---
source: tests/eval.rs
description: "class Foo {\n    set_lol(val) {\n        this.lol = val;\n    }\n\n    get_lol() {\n        return this.lol;\n    }\n}\n\nvar foo = Foo();\nfoo.set_lol(\"lol\");\nprint foo.get_lol(); // > lol\n\n"
expression: combined
---
:: Output ::
lol
